--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,6 +25,7 @@ html
             li class="#{active_class(cohorts_path)}" = link_to 'Cohorts', cohorts_path
             li class="#{active_class(questions_path)}" = link_to 'Questions', questions_path
             li class="#{active_class(quizzes_path)}" = link_to 'Quizzes', quizzes_path
+            li class="#{active_class(students_path)}" = link_to 'Students', students_path
             li class="#{active_class(users_path)}"  = link_to 'Users', users_path
           ul.nav.navbar-nav.navbar-right
             li.dropdown
