--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -41,7 +41,7 @@
               - @submission_stats.group_by { |s| s.student.try(:github_username) || '[deleted student]' }.sort.each do |username_submissions_pairs|
                 - username_submissions_pairs[1].group_by(&:id).each_value do |submissions|
                   tr
-                    td = link_to username_submissions_pairs[0], submissions.first
+                    td = link_to username_submissions_pairs[0], submissions.first.student
                     td = link_to render(partial: 'submissions/stats_score', locals: {submissions: submissions}), submissions.first, class: 'text-inherit'
                     td.text-nowrap = link_to submissions.first.created_at, submissions.first, class: 'text-inherit'
                     td.text-right = link_to submissions.first, method: :delete, class: 'text-muted', data: {confirm: 'Are you sure you want to delete this submission?'} do
