--- a/app/views/students/show.html.slim
+++ b/app/views/students/show.html.slim
@@ -9,3 +9,31 @@
         b = 'Student: '
         = @student.github_username
       p = render partial: 'shared/header_timestamps', locals: {model: @student}
+    h2 Submissions
+    - if @submission_stats.empty?
+      p There are currently no submissions for this quiz.
+    - else
+      .table-responsive
+        table.table
+          thead
+            tr
+              th Cohort
+              th Quiz
+              th Score
+              th Submitted
+              th
+          tfoot
+            tr
+              th colspan="2" Average correct
+              td = @submission_stats.average_correct.round(2)
+              th Number of submissions
+              td.text-right = @student.submissions.count
+          tbody
+            - @submission_stats.group_by(&:id).each_value do |submissions|
+              tr
+                td = link_to submissions.first.try(:quiz).try(:cohort).try(:name), submissions.first.try(:quiz).try(:cohort)
+                td = link_to submissions.first.try(:quiz).try(:day), submissions.first.try(:quiz)
+                td = link_to render(partial: 'submissions/stats_score', locals: {submissions: submissions}), submissions.first, class: 'text-inherit'
+                td.text-nowrap = link_to submissions.first.created_at, submissions.first, class: 'text-inherit'
+                td.text-right = link_to submissions.first, method: :delete, class: 'text-muted', data: {confirm: 'Are you sure you want to delete this submission?'} do
+                  i.fa.fa-trash title="Delete"
