--- a/app/views/students/show.html.slim
+++ b/app/views/students/show.html.slim
@@ -8,8 +8,31 @@
       h1
         b = 'Student: '
         = @student.github_username
-      p = render partial: 'shared/header_timestamps', locals: {model: @student}
-    h2 Submissions
+      p
+        = render partial: 'shared/header_timestamps', locals: {model: @student}
+        = ' | '
+        a href="#edit-activity-form-container" data-toggle="collapse" edit
+    #edit-activity-form-container class="collapse #{'in' if @student.errors.any?}"
+      = form_for @student do |f|
+        = render partial: 'shared/form_errors', locals: {model: @student}
+        .row
+          .col-md-6
+            .form-horizontal
+              .form-group
+                = f.label :github_username, class: 'control-label col-md-6'
+                .col-md-6 = f.text_field :github_username, class: 'form-control'
+          .col-md-6
+            .form-horizontal
+              .form-group
+                = f.label :cohort_id, class: 'control-label col-md-6'
+                .col-md-6 = f.collection_select :cohort_id, Cohort.all, :id, :name, {}, class: 'form-control'
+              .form-group
+                = f.label :compass_primary_key, class: 'control-label col-md-6'
+                .col-md-6 = f.text_field :compass_primary_key, class: 'form-control'
+        .form-group.text-right
+          = f.submit class: 'btn btn-primary'
+    .clearfix
+      h2 Submissions
     - if @submission_stats.empty?
       p There are currently no submissions by this student.
     - else
