--- a/app/views/cohorts/index.html.slim
+++ b/app/views/cohorts/index.html.slim
@@ -26,7 +26,7 @@
                   td = link_to cohort.name, cohort
                   td.text-right = link_to cohort.quizzes.count, quizzes_path(cohort_id: cohort.id), class: 'label label-primary', title: 'Quizzes | New Quiz'
                   td.text-nowrap = cohort.compass_install
-                  td = cohort.compass_primary_key
+                  td.text-right = cohort.compass_primary_key
                   td.text-right
                     = link_to cohort, method: :delete, class: 'text-muted pull-right', data: { confirm: "Are you sure you want to delete \"#{cohort_name(cohort)}\"?" } do
                       i.fa.fa-trash title="Delete"
