--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -33,15 +33,19 @@
                 th
             tfoot
               tr
-                th Average correct
+                th.text-right Average correct
                 td = @submission_stats.average_correct.round(2)
-                th Number of submissions
+                th.text-right Number of submissions
                 td.text-right = @quiz.submissions.count
             tbody
               - @submission_stats.group_by { |s| s.student.try(:github_username) || '[deleted student]' }.sort.each do |username_submissions_pairs|
                 - username_submissions_pairs[1].group_by(&:id).each_value do |submissions|
                   tr
-                    td = link_to username_submissions_pairs[0], submissions.first.student
+                    td
+                      - if submissions.first.student
+                        = link_to username_submissions_pairs[0], submissions.first.student
+                      - else
+                        = username_submissions_pairs[0]
                     td = link_to render(partial: 'submissions/stats_score', locals: {submissions: submissions}), submissions.first, class: 'text-inherit'
                     td.text-nowrap = link_to submissions.first.created_at, submissions.first, class: 'text-inherit'
                     td.text-right = link_to submissions.first, method: :delete, class: 'text-muted', data: {confirm: 'Are you sure you want to delete this submission?'} do
