--- a/app/views/students/show.html.slim
+++ b/app/views/students/show.html.slim
@@ -47,15 +47,23 @@
               th
           tfoot
             tr
-              th colspan="2" Average correct
+              th.text-right colspan="2" Average correct
               td = @submission_stats.average_correct.round(2)
-              th Number of submissions
+              th.text-right Number of submissions
               td.text-right = @student.submissions.count
           tbody
             - @submission_stats.group_by(&:id).each_value do |submissions|
               tr
-                td = link_to submissions.first.try(:quiz).try(:cohort).try(:name), submissions.first.try(:quiz).try(:cohort)
-                td = link_to submissions.first.try(:quiz).try(:day), submissions.first.try(:quiz)
+                td
+                  - if submissions.first.quiz.try(:cohort)
+                    = link_to submissions.first.quiz.cohort.name, submissions.first.quiz.cohort
+                  - else
+                    | [n/a]
+                td
+                  - if submissions.first.quiz
+                    = link_to submissions.first.quiz.day, submissions.first.quiz
+                  - else
+                    | [deleted quiz]
                 td = link_to render(partial: 'submissions/stats_score', locals: {submissions: submissions}), submissions.first, class: 'text-inherit'
                 td.text-nowrap = link_to submissions.first.created_at, submissions.first, class: 'text-inherit'
                 td.text-right = link_to submissions.first, method: :delete, class: 'text-muted', data: {confirm: 'Are you sure you want to delete this submission?'} do
