Add stats to quiz questions.

--- a/app/views/quizzes/show.html.slim
+++ b/app/views/quizzes/show.html.slim
@@ -54,4 +54,5 @@
         h2 Questions
         - @quiz.questions.each_with_index do |question, question_index|
           h3 = link_to "Question ##{question_index + 1}", question
+          p = render partial: 'questions/stats_score', locals: { questions: @question_stats.select { |qs| qs.id == question.id } }
           = markdown(question.question)
