--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,7 +66,14 @@ textarea.markdown {
 
 .page-content {
   background: #fff;
-  padding: 2rem 4rem 8rem;
+  padding: 2rem 2rem 8rem;
+}
+
+@media (min-width: $screen-sm-min) {
+  .page-content {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
 
 .question-option {
