--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html
             span.icon-bar
           a.navbar-brand href="/"
             i.fa.fa-compass
-            = ' Compass Quiz'
+            span.hidden-sm = ' Compass Quiz'
         .collapse.navbar-collapse#navbar-collapse
           ul.nav.navbar-nav
             li class="#{active_class(activities_path)}" = link_to 'Activities', activities_path
