--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -3,7 +3,7 @@
     .page-header
       h1 Build and deliver quizzes
     .row
-      .col-sm-5
+      .col-sm-6.col-lg-5
         p.lead Choose a management option:
         .list-group
           - @page.keys.sort.each do |key|
@@ -15,5 +15,5 @@
                   b = time_ago_in_words(@page[key][:last_updated])
                   = ' ago'
               span.badge = @page[key][:count]
-      .col-sm-6.col-sm-push-1
+      .col-sm-6.col-lg-push-1
         = render partial: 'quizzes/form'
