--- a/app/views/students/index.html.slim
+++ b/app/views/students/index.html.slim
@@ -35,8 +35,8 @@
               .panel-body.form-horizontal
                 .form-group
                   = label_tag 'student_from[id]', 'Merge', class: 'control-label col-sm-3'
-                  .col-sm-9 = collection_select(:student_from, :id, Student.all, :id, :github_username, {prompt: true}, {class: 'form-control'})
+                  .col-sm-9 = collection_select(:student_from, :id, Student.all, :id, :github_username, {prompt: 'Select duplicate student'}, {class: 'form-control'})
                 .form-group
                   = label_tag 'student_to[id]', 'Into', class: 'control-label col-sm-3'
-                  .col-sm-9 = collection_select(:student_to, :id, Student.all, :id, :github_username, {prompt: true}, {class: 'form-control'})
+                  .col-sm-9 = collection_select(:student_to, :id, Student.all, :id, :github_username, {prompt: 'Select destination student'}, {class: 'form-control'})
               .panel-footer.clearfix = submit_tag 'Merge', class: 'btn btn-primary pull-right'
